# jcutils

./: .gitignore  CMakeLists.txt  README.md  arraylist.c  jcutils_common.h
datastructures/: arraylist.c  arraylist.h  jcutils_common.h  jutils_common.h
src/: Makefile  arraylist.h
src/tests/: arraylist_tests.c  arraylist_tests.h
test/: CMakeLists.txt  arraylist_tests.c
